<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/includeLayout"
    android:clickable="true"
    android:focusable="true"
    android:visibility="visible">


    <!-- Pantalla 1: Bienvenida -->
    <LinearLayout
        android:id="@+id/guide1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/semiTransparentPurple"
        android:gravity="center">
        <Button
            android:id="@+id/button_skip_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:fontFamily="casual"/>

        <ImageView
            android:id="@+id/logoWelcome"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/spyro_log"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textWelcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/explanatory_text_1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/textWelcome3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/explanatory_text_2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textWelcome4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ready"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/gems"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <!-- Pantalla 2: Personajes -->
    <RelativeLayout
        android:id="@+id/guide2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/info_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="80dp"
            android:text="@string/explanatory_text_3"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="10dp"/>

        <View
            android:id="@+id/highlight_circle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circle_highlight" />
        <Button
            android:id="@+id/button_next_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/button_skip_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <!-- Pantalla 3: Mundos -->
    <RelativeLayout
        android:id="@+id/guide3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/info_texto_mundos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:text="@string/explanatory_text_4"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="80dp"
            android:padding="10dp"/>

        <View
            android:id="@+id/highlight_circle_mundos"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circle_highlight" />
        <Button
            android:id="@+id/button_next_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/button_skip_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <!-- Pantalla 4: Coleccionables -->
    <RelativeLayout
        android:id="@+id/guide4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/info_texto_coleccionables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:text="@string/explanatory_text_5"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:layout_marginBottom="80dp"/>

        <View
            android:id="@+id/highlight_circle_coleccionables"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circle_highlight" />
        <Button
            android:id="@+id/button_next_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/button_skip_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

    <!-- Pantalla 5: Icono de información -->
    <RelativeLayout
        android:id="@+id/guide5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/info_texto_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:text="@string/explanatory_text_info"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/highlight_arrow_up"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo" android:src="@drawable/ic_arrow_up"
            tools:ignore="ContentDescription" />
        <Button
            android:id="@+id/button_next_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/button_skip_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <!-- Pantalla 6: Resumen final de la guía y cierre -->
    <RelativeLayout
        android:id="@+id/guide6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/blanco"
        android:gravity="center">

        <!-- Texto de resumen -->
        <TextView
            android:id="@+id/summary_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/summary_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Lista de pasos completados -->
        <TextView
            android:id="@+id/summary_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_title"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/summary_steps"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Botón para finalizar la guía -->
        <Button
            android:id="@+id/button_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_steps"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/gems"
            android:text="@string/start_app"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>




</RelativeLayout>
